# socket-chat

./: .env.example  .gitignore  Dockerfile  README.md  build.ps1  docker-compose.yml  main.py  pyproject.toml  qt6_path_hook.py  socket-chat-client.spec
client/: api.py  async_runner.py  main.py  style.qss  ui.py  ws.py
server/: api.py  config.py  db.py  deps.py  main.py  models.py  schemas.py  security.py  ws.py
